--- a/spec/dummy/.env
+++ b/spec/dummy/.env
@@ -1,6 +1,6 @@
-S3_KEY=AKIAISNHYI6ERWRBKQOA
-S3_SECRET=l2VY5rUArIHRDwqfdXwfPrORA6bvkGlMWTLl9CfN
-S3_REGION=sa-east-1
+S3_KEY=tmp
+S3_SECRET=tmp
+S3_REGION=us-east-1
 S3_BUCKET=upboxtemp
 
 HEROKU_API_KEY=tmp
