--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ rvm:
   - 1.9.3
   - 2.3.0
 gemfile:
-  - Gemfile
+  - gemfiles/ruby230.gemfile
+  - gemfiles/ruby193.gemfile
 
 matrix:
-  include:
+  exclude:
     - rvm: 1.9.3
-      gemfile: gemfiles/ruby193.gemfile
-    - rvm: 2.3.0
       gemfile: gemfiles/ruby230.gemfile
+    - rvm: 2.3.0
+      gemfile: gemfiles/ruby193.gemfile
+
+sudo: false
+cache: bundler
